7282ff1 fix(search): overflow search-input fix + stop hiding label when focusing. (closes #412) (#418)

--- a/search/search-box/search-box.component.css
+++ b/search/search-box/search-box.component.css
@@ -1,12 +1,8 @@
 :host {
   display: block; }
 
-.td-search-box {
-  height: 64px; }
-  .td-search-box td-search-input {
-    margin-left: 12px; }
-    /deep/ [dir='rtl'] .td-search-box td-search-input {
-      margin-right: 12px;
-      margin-left: 0px !important; }
-    .td-search-box td-search-input /deep/ .mat-input-placeholder.mat-focused {
-      visibility: hidden; }
+.td-search-box td-search-input {
+  margin-left: 12px; }
+  /deep/ [dir='rtl'] .td-search-box td-search-input {
+    margin-right: 12px;
+    margin-left: 0px !important; }
