--- a/search/search-input/search-input.component.css
+++ b/search/search-input/search-input.component.css
@@ -1,5 +1,4 @@
 .td-search-input {
-  height: 64px;
   overflow-x: hidden; }
   .td-search-input /deep/ md-input-container.mat-hide-underline .mat-input-underline {
     display: none; }
